Fixed Dark Mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --dark-text: rgba(255, 255, 255, 0.8);
+  --btn-bg: rgb(48, 111, 219);
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -80,11 +85,11 @@ th {
 }
 
 .btn-submit:hover {
-  border: 3px solid rgb(48, 111, 219);
+  border: 3px solid var(--btn-bg);
 }
 
 .btn-submit:active {
-  border: 3px solid rgb(48, 111, 219);
+  border: 3px solid var(--btn-bg);
 }
 
 .btn-search-radio {
@@ -93,7 +98,7 @@ th {
 
 .btn-add-track {
   display: inline-block;
-  padding: 0.2em;
+  padding: 0.4em;
   margin-left: 0.5em;
   border-radius: 25%;
   background-color: white;
@@ -102,18 +107,18 @@ th {
 }
 
 .btn-add-track:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
   cursor: pointer;
 }
 
 .btn-add-track:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
   cursor: pointer;
 }
 
 .btn-play {
   display: inline-block;
-  padding: 0.2em;
+  padding: 0.4em;
   border-radius: 25%;
   background-color: white;
   border: 1px solid black;
@@ -121,12 +126,12 @@ th {
 }
 
 .btn-play:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
   cursor: pointer;
 }
 
 .btn-play:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
   cursor: pointer;
 }
 
@@ -141,12 +146,12 @@ th {
 }
 
 .btn-delete-track:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
   cursor: pointer;
 }
 
 .btn-delete-track:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
   cursor: pointer;
 }
 
@@ -162,12 +167,12 @@ th {
 }
 
 .btn-collapse:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
   cursor: pointer;
 }
 
 .btn-collapse:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
   cursor: pointer;
 }
 
@@ -180,11 +185,11 @@ th {
 }
 
 .btn-sort:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
 }
 
 .btn-sort:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
 }
 
 .btn-nav-search {
@@ -201,11 +206,11 @@ th {
 }
 
 .btn-nav-search:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
 }
 
 .btn-nav-search:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
 }
 
 .btn-nav-data {
@@ -221,11 +226,11 @@ th {
 }
 
 .btn-nav-data:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
 }
 
 .btn-nav-data:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
 }
 
 .btn-next {
@@ -239,12 +244,12 @@ th {
 }
 
 .btn-next:hover {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
   cursor: pointer;
 }
 
 .btn-next:active {
-  background-color: rgb(48, 111, 219);
+  background-color: var(--btn-bg);
   cursor: pointer;
 }
 
@@ -252,7 +257,6 @@ th {
 
 .search-label {
   margin-right: 0.5em;
-  ;
 }
 
 .searchbar {
@@ -266,11 +270,11 @@ th {
 }
 
 .searchbar:hover {
-  border: 3px solid rgb(48, 111, 219);
+  border: 3px solid var(--btn-bg);
 }
 
 .searchbar:active {
-  border: 1px solid rgb(48, 111, 219);
+  border: 1px solid var(--btn-bg);
 }
 
 /* FIRST SECTION */
@@ -351,17 +355,30 @@ th {
 
   @media (prefers-color-scheme: dark) {
     body{
-      background-color: rgba(0, 0, 0, 0.1);
-      color:rgba(255, 255, 255, 0.7);
+      background-color: rgba(0, 0, 0, 0.7);
+      color:var(--dark-text);
     }
-  }
+  
+    .searchbar {
+      border: 1px solid black;
+      background-color: rgba(255, 255, 255, 0.4);
+      color: var(--dark-text);
+    }
+
+    .searchbar:hover {
+      border: 3px solid var(--btn-bg);
+    }
+
+    .searchbar:active {
+      border: 1px solid var(--btn-bg);
+    }
 
     .btn-submit {
       border-radius: 0px 10px 10px 0px;
-      border: 1px solid rgba(0, 0, 0, 0.4);
+      border: 1px solid black;
       padding: 0.2em;
-      color:rgba(255, 255, 255, 0.4);
-      background-color: rgb(48, 111, 219);
+      color: var(--dark-text);
+      background-color: var(--btn-bg);
     }
   
     .btn-submit:hover {
@@ -377,8 +394,8 @@ th {
       padding: 0.2em;
       margin-left: 0.5em;
       border-radius: 25%;
-      color: rgba(255, 255, 255, 0.4);
-      background-color: rgb(48, 111, 219);
+      color: var(--dark-text);
+      background-color: var(--btn-bg);
       border: 1px solid black;
       cursor: pointer;
     }
@@ -397,8 +414,8 @@ th {
       display: inline-block;
       padding: 0.2em;
       border-radius: 25%;
-      color:rgba(255, 255, 255, 0.4);
-      background-color: rgb(48, 111, 219);
+      color: var(--dark-text);
+      background-color: var(--btn-bg);
       border: 1px solid black;
       cursor: pointer;
     }
@@ -418,8 +435,8 @@ th {
       padding: 0.2em;
       border-radius: 25%;
       margin-right: 1em;
-      color: rgba(255, 255, 255, 0.4);
-      background-color: rgb(48, 111, 219);
+      color: var(--dark-text);
+      background-color: var(--btn-bg);
       border: 1px solid black;
       cursor: pointer;
     }
@@ -441,19 +458,19 @@ th {
       width: 50%;
       display: inline-block;
       padding: 1em;
-      color: rgba(255, 255, 255, 0.4);
-      background-color: rgb(48, 111, 219);
+      color: var(--dark-text);
+      background-color: var(--btn-bg);
       border: 1px solid black;
       border-right: 0;
       cursor: pointer;
     }
   
     .btn-nav-search:hover {
-      border: 1px solid rgb(48, 111, 219);
+      border: 1px solid white;
     }
   
     .btn-nav-search:active {
-      background-color: rgb(48, 111, 219);
+      background-color: white;
     }
   
     .btn-nav-data {
@@ -463,8 +480,8 @@ th {
       width: 50%;
       display: inline-block;
       padding: 1em;
-      color: rgba(255, 255, 255, 0.4);
-      background-color: rgb(48, 111, 219);
+      color: var(--dark-text);
+      background-color: var(--btn-bg);
       border: 1px solid black;
       cursor: pointer;
     }
@@ -476,4 +493,5 @@ th {
     .btn-nav-data:active {
       background-color: white;
     }
+  }
 }
